web/css/style.css
body {
    max-width: 650px;
    margin: 1em auto;
    line-height: 1.4em;
    padding: 0.3em;
    color: #444;
}

div.header a.logo img {
    height: 3em;
}

div.header a.account {
    float: right;
    text-align: center;
    font-size: 75%;
    text-decoration: none;
}

div.header a.account img {
    height: 1.5em;
    display: block;
    margin: 0 auto;
}

p {
    text-align: justify;
}

p.info {
    background-color: #063;
    border: 1px solid #041;
    color: #fff;
    padding: 1em;
}

p.info a {
    color: #fff;
}

p.warning {
    background-color: #fc0;
    border: 1px solid #da0;
    color: #000;
    padding: 1em;
}

p.err {
    background-color: #c00;
    border: 1px solid #a00;
    color: #000;
    padding: 1em;
}

p.err a {
    color: #000;
}

p.plain {
    background-color: #eee; 
    border: 1px solid #ccc;
    color: #000;
    padding: 1em;
}

a {
    color: #000;
}

button {
    background-color: #ddd;
    border: 1px solid #bbb;
    color: #000;
    height: 2em;
    line-height: 2em;
}

button.info {
    background-color: #063;
    border: 1px solid #041;
    color: #fff; 
}

button.warning {
    background-color: #fc0;
    border: 1px solid #da0;
    color: #000; 
}

button.error {
    background-color: #c00;
    border: 1px solid #a00;
    color: #fff;
}

table {
    width: 100%;
    margin: 1em 0;
}

td, th {
    padding: 0.5em 0;
}

th {
    text-align: left;
}

input[type="text"], input[type="password"] {
    padding: 0.5em;
    display: block;
    margin: 0.5em 0;
}

div.footer {
    margin-top: 2em;
    text-align: center;
    font-size: 75%;
    color: #ccc;    
}

div.footer a {
    color: #ccc;
}

